fix: update init admin account + 에러 수정